@@ -100,6 +100,8 @@ v1.5.x (XXXX-XX-XX)
 v1.4.x (XXXX-XX-XX)
 -------------------
 
+* fixed issue #701: ArangoStatement undefined in arangosh
+
 * fixed typos in configuration files
 
 
